--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
     "name": "TaskBuddy",
-    "slug": "TaskBuddy",
+    "slug": "Task-Buddy",
+    "scheme": "TaskBuddy-scheme",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +26,34 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            {
+              "asset": "./assets/fonts/OpenSans-Regular.ttf"
+            },
+            {
+              "asset": "./assets/fonts/OpenSans-Bold.ttf"
+            },
+            {
+              "asset": "./assets/fonts/OpenSans-Italic.ttf"
+            },
+            {
+              "asset": "./assets/fonts/OpenSans-BoldItalic.ttf"
+            },
+            {
+              "asset": "./assets/fonts/OpenSans-Light.ttf"
+            },
+            {
+              "asset": "./assets/fonts/OpenSans-LightItalic.ttf"
+            }
+          ]
+        }
+      ],
+      "expo-router"
+    ]
   }
 }
