--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,8 @@
 {
   "cli": {
-    "version": ">= 7.8.0"
+    "version": "7.8.1"
   },
+  "owner": "gcalcadaStudios",
   "build": {
     "development": {
       "android": {
