--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "TaskBuddy",
     "slug": "Task-Buddy",
     "scheme": "taskbuddy",
-    "version": "1.1.0",
+    "runtimeVersion": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
