--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     ],
     "android": {
       "package": "com.gcalcadaStudios.TaskBuddy",
-      "googleServicesFile": "./android/google-services.json",
+      "googleServicesFile": "/google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
