--- a/app.json
+++ b/app.json
@@ -69,5 +69,14 @@
   "updates": {
     "url": "https://u.expo.dev/5bc56f5a-2074-4d40-a6ad-bff9866b160c"
   },
-  "sdkVersion": "51.0.0"
+  "sdkVersion": "51.0.0",
+  "android": {
+    "versionCode": 18,
+    "package": "com.gcalcada7.taskbuddy"
+  },
+  "extra": {
+    "eas": {
+      "projectId": "505fab2b-99e6-42d9-9606-a1c70fdb20e8"
+    }
+  }
 }
