--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
   "scheme": "taskbuddy",
   "runtimeVersion": "1.1.0",
   "orientation": "portrait",
+  "jsEngine": "hermes",
   "icon": "./assets/icon.png",
   "userInterfaceStyle": "light",
   "splash": {
@@ -15,13 +16,13 @@
     "**/*"
   ],
   "android": {
-    "package": "com.gcalcadaStudios.TaskBuddy",
+    "versionCode": 18,
+    "package": "com.gcalcada7.taskbuddy",
     "googleServicesFile": "./google-services.json",
     "adaptiveIcon": {
       "foregroundImage": "./assets/adaptive-icon.png",
       "backgroundColor": "#ffffff"
     },
-    "versionCode": 16,
     "permissions": [
       "android.permission.READ_EXTERNAL_STORAGE",
       "android.permission.WRITE_EXTERNAL_STORAGE",
@@ -32,6 +33,7 @@
     "favicon": "./assets/favicon.png"
   },
   "plugins": [
+    "expo-router",
     [
       "expo-font",
       {
@@ -49,7 +51,9 @@
       "@react-native-firebase/app",
       {
         "android": {
-          "googleServicesFile": "./android/google-services.json"
+          "googleServicesFile": "./android/google-services.json",
+          "versionCode": 18,
+          "package": "com.gcalcada7.taskbuddy"
         }
       }
     ],
@@ -63,20 +67,14 @@
   "extra": {
     "eas": {
       "projectId": "5bc56f5a-2074-4d40-a6ad-bff9866b160c"
+    },
+    "router": {
+      "origin": false
     }
   },
   "owner": "gcalcadastudios",
   "updates": {
     "url": "https://u.expo.dev/5bc56f5a-2074-4d40-a6ad-bff9866b160c"
   },
-  "sdkVersion": "51.0.0",
-  "android": {
-    "versionCode": 18,
-    "package": "com.gcalcada7.taskbuddy"
-  },
-  "extra": {
-    "eas": {
-      "projectId": "505fab2b-99e6-42d9-9606-a1c70fdb20e8"
-    }
-  }
+  "sdkVersion": "51.0.0"
 }
