--- a/app.json
+++ b/app.json
@@ -71,5 +71,18 @@
     "router": {
       "origin": false
     }
+  },
+  "owner": "gcalcadastudios",
+  "sdkVersion": "51.0.0",
+  "expo": {
+    "android": {
+      "versionCode": 19,
+      "package": "com.gcalcada7.taskbuddy"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "505fab2b-99e6-42d9-9606-a1c70fdb20e8"
+      }
+    }
   }
 }
