Some implementations like -add tasks , -show the tasks, some ui adjustments 2

--- a/app.json
+++ b/app.json
@@ -64,7 +64,7 @@
     ],
     "expo-asset"
   ],
-  "owner": "gcalcadastudios",
+  "owner": "gcalcada7",
   "sdkVersion": "51.0.0",
   "expo": {
     "android": {
