Some implementations like -add tasks , -show the tasks, some ui adjustments

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "TaskBuddy",
-  "slug": "Task-Buddy",
+  "slug": "taskbuddy",
   "scheme": "taskbuddy",
   "runtimeVersion": "1.1.0",
   "orientation": "portrait",
